1.0.2 New API specs, force_sync, vad. See RELEASE
