# transcriptionservice/document/swagger.yaml
@@ -1,71 +1,188 @@
-swagger: "2.0"
-
+openapi: 3.0.1
 info:
-  version: 1.0.0
   title: Transcription service
   description: Transcription request interface
-
-schemes:
-  - http
-host: localhost:8000
-basePath: /
-
+  version: 1.0.0
+servers:
+- url: /
 paths:
   /transcribe:
     post:
       tags:
-        - "Speech-To-Text API"
+      - Speech-To-Text API
       summary: Perform Speech-to-Text
-      consumes:
-      - "multipart/form-data"
-      produces:
-      - "application/json"
-      - "text/plain"
-      parameters: 
-      - name: "file"
-        in: "formData"
-        description: "Audio File - Waveform Audio File Format is required. Best configuration (16KHz, 16b, mono)"
-        required: true
-        type: "file"
-      - name: "format"
-        in: "formData"
-        description: "Return transcription format"
-        required: false
-        type: string
-        enum: [raw, speakers, formated]
-      - name: "spk_number"
-        in: "formData"
-        description: "Number of speaker if diarization is required (formats speakers & formated)"
-        required: false
-        type: integer
-      - name: "no_cache"
-        in: "formData"
-        description: "If true, does not fetch result in DB"
-        required: false
-        type: boolean
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                file:
+                  type: string
+                  format: binary
+                transcriptionConfig:
+                  type: object
+                  $ref: '#/components/schemas/transcriptionConfig'
+                no_cache:
+                  type: boolean
+                force_sync:
+                  type: boolean
+                  default: false
       responses:
         200:
-          description: Successfully transcribed the audio
+          description: "Job successfully finished (force_sync)"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/transcriptionResult'
+            text/plain:
+              schema:
+                type: string
+                default: This is a transcription
         201:
           description: Successfully created transcription job
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/jobID'
+        400:
+          description: "Bad request"
+          content:
+            text/plain:
+              schema:
+                type: string
+                default: "Bad header / Bad parameters / No file attached"
+        500:
+          description: "Server error"
+          content:
+            text/plain:
+              schema:
+                type: string
+                default: "The server encountered an unexpected error."
+        
   /job/{jobid}:
     get:
-      tags:
-        - "Job status"
-      summary: Return job status or result if available
-      produces:
-        - "application/json"
-        - "text/plain"
-      parameters:
-        - name: "jobid"
-          in: path
-          required: true
-          description: "Transcription jobid returned by a transcription request"
-          type: string
       responses:
         200:
-          description: Successfully transcribed the audio
+          description: "Job successfully finished"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/transcriptionResult'
+            text/plain:
+              schema:
+                type: string
+                default: This is a transcription
         202:
           description: Task is still processing
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/jobInProgress'
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/jobInProgress'
         400:
           description: Task has failed or do not exist
+          content: {}
+
+components:
+  schemas:
+    transcriptionConfig:
+      type: object
+      properties:
+        transcribePerChannel:
+          type: boolean
+          default: false
+        enablePunctuation:
+          type: boolean
+          default: false
+        diarizationConfig:
+          type: object
+          $ref: '#/components/schemas/diarizationConfig'
+        subtitleConfig:
+          type: object
+          $ref: '#/components/schemas/subtitleConfig'
+    diarizationConfig:
+      type: object
+      properties:
+        enableDiarization:
+          type: boolean
+          default: false
+        numberOfSpeaker:
+          type: integer
+          default: null
+        maxNumberOfSpeaker:
+          type: integer
+          default: null
+    subtitleConfig:
+      type: object
+      properties:
+        enableSubtitle:
+          type: boolean
+          default: false
+        subtitleFormat:
+          type: string
+          enum: ["VTT", "SRT"]
+          default: "VTT"
+        maxCharacterPerLine:
+          type: integer
+          default: 25
+    jobID:
+      type: object
+      properties:
+        jobid:
+          type: string
+    jobInProgress:
+      type: object
+      properties:
+        state:
+          type: string
+          enum: [started, pending]
+        progress:
+          type: object
+    transcriptionResult:
+      type: object
+      properties:
+        transcription_result:
+          type: string
+        confidence:
+          type: number
+        raw_transcription:
+          type: string
+        segments:
+          type: array
+          items:
+            $ref: '#/components/schemas/speechSegment'
+    speechSegment:
+      type: object
+      properties:
+        spk_id: 
+          type: string
+        start: 
+          type: number
+        end: 
+          type: number
+        duration: 
+          type: number
+        segment: 
+          type: string
+        raw_segment:
+          type: string
+        words:
+          type: array
+          items:
+            $ref: '#/components/schemas/word'
+    word:
+      type: object
+      properties:
+        start:
+          type: number
+        end:
+          type: number
+        word:
+          type: string
+        confidence:
+          type: number
+
+
