# transcriptionservice/server/utils/util.py
@@ -2,12 +2,16 @@ import os
 import hashlib
 import subprocess
 
+from transcriptionservice.server.utils.transcriptionconfig import TranscriptionConfig
+
 __all__ = ["fileHash", "requestlog"]
 
 def fileHash(f):
+    """ Returns md5 hash hexdigest"""
     return hashlib.md5(f).hexdigest()
 
-def requestlog(logger, origin, param, hashed, result_cached):
+def requestlog(logger, origin: str, config: TranscriptionConfig, hashed: str, result_cached: bool):
+    """ Displays request parameters as log INFO"""
     logger.info("""Request received:\n
                 Origin: {}\n 
                 Hash: {}\n
@@ -15,6 +19,6 @@ def requestlog(logger, origin, param, hashed, result_cached):
                 Result_cached: {}""".format(
                     origin,
                     hashed,
-                    param,
+                    str(config),
                     result_cached
                 ))
